Start to implementing of convert to polynomial energy cal.  Some bug fixes. Implemented fitting polynomial coefficients based off of lower channel energies (seems to work, needs more testing though) Implemented GUI for converting to Polynomial; need to implement accepting still though. Made so spectrum record title will truncate with ellipses in the Spectrum Files tab. Fixed some misc. small bugs confusing preference names and widths with heights and such

--- a/InterSpec_resources/EnergyCalTool.css
+++ b/InterSpec_resources/EnergyCalTool.css
@@ -352,6 +352,11 @@ color: #E0F5FF;
 }
 
 
+.ConvertToPolyMsg
+{
+  
+}
+
 .CalDisplay .DevPairDisplay
 {
   width: 14em;
